--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autobind-decorator": "^2.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts-ts": "2.7.0"
@@ -18,6 +19,7 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "devDependencies": {
+    "@types/autobind-decorator": "^1.3.3",
     "@types/jest": "^20.0.8",
     "@types/node": "^8.0.28",
     "@types/react": "^16.0.5",
